--- a/6.6.md
+++ b/6.6.md
@@ -14,6 +14,12 @@
        db.currentOp()
     Завершение операции по opid
        db.killOp()
+    
+###Доработка
+
+    Использовать Mongostat для анализа происходяшего 
+    Добавить индекс
+
 
 #### Задача 2
 
@@ -29,7 +35,8 @@
 Как вы думаете, в чем может быть проблема?
 
     Возможно проблема связана с исчерпанием ресурсов оперативной памяти. 
-
+    Если редис блогирует оперции записи, значит происзодит чтение. решить эту проблему можно используя репликацию master-slave для разделения операций записи и чтения
+    
 #### Задача 3
 
 Перед выполнением задания познакомьтесь с документацией по Common Mysql errors.
@@ -63,3 +70,6 @@ postmaster invoked oom-killer
 
     Причина в нехватке оперативной памяти, в результате ОС завершает процессы утилизирующие память, чтобы предотвратить падение всей системы.
     Для предотвращения сбоев необходимо ограничить ресурсы PostgreSQL или увеличить объем оперативной памяти.
+ 
+    Out-Of-Memory Killer это процесс, который завершает приложение, чтобы спасти ядро от сбоя
+    Он жертвует приложением, чтобы сохранить работу ОС
