--- a/6.6.md
+++ b/6.6.md
@@ -10,15 +10,15 @@
 
     напишите список операций, которые вы будете производить для остановки запроса пользователя
     предложите вариант решения проблемы с долгими (зависающими) запросами в MongoDB
-    Определение текущей операци:  
-       db.currentOp()
+    Найти opid операции длитольностью больше 3х минут:  
+       db.currentOp({ "active" : true, "secs_running" : { "$gt" : 180 }})
     Завершение операции по opid
-       db.killOp()
-    
-###Доработка
+       db.killOp "Результат первой команды"
 
-    Использовать Mongostat для анализа происходяшего 
-    Добавить индекс
+
+    предложите вариант решения проблемы с долгими (зависающими) запросами в MongoDB
+     с помощью executionStats провести анализ, на основе анализа попробовать опритизировать? добавить индексацию.
+
 
 
 #### Задача 2
@@ -34,8 +34,8 @@
 
 Как вы думаете, в чем может быть проблема?
 
-    Возможно проблема связана с исчерпанием ресурсов оперативной памяти. 
-    Если редис блогирует оперции записи, значит происзодит чтение. решить эту проблему можно используя репликацию master-slave для разделения операций записи и чтения
+    вся память занята истекшими ключами, но еще не удаленными. Redis - однопоточное приложение, то все операции блокируются,
+    пока он не выполнит очистку. Можно изменить hz в redis.conf
     
 #### Задача 3
 
@@ -52,7 +52,8 @@ InterfaceError: (InterfaceError) 2013: Lost connection to MySQL server during qu
     - Увеличить ресурсы машины 
     - Увеличить значение параметров : connect_timeout, interactive_timeout, wait_timeout
     - Создать индексы для ускорения запросов
-    - Увеличить net_read_timeout при возникновении сетевых сбоев 
+    - Увеличить net_read_timeout при возникновении сетевых сбоев
+    - самый крайний способ это переехать на postgres
 
 #### Задача 4
 
@@ -73,3 +74,10 @@ postmaster invoked oom-killer
  
     Out-Of-Memory Killer это процесс, который завершает приложение, чтобы спасти ядро от сбоя
     Он жертвует приложением, чтобы сохранить работу ОС
+    Необходимо провести настройку используемых ресурсов
+    Поправить параметры:
+    -max_connections
+    -shared_buffer
+    -work_mem
+    -effective_cache_size
+    -maintenance_work_mem
