--- a/6.6.md
+++ b/6.6.md
@@ -36,7 +36,12 @@
 
     вся память занята истекшими ключами, но еще не удаленными. Redis - однопоточное приложение, то все операции блокируются,
     пока он не выполнит очистку. Можно изменить hz в redis.conf
+
+Доработка
     
+    Если мыслить логически то я бы предположил что какая-то из операций заставляет redis делать fork() , из за чего использоется в 2 раза болше выделенной памяти.
+    Но почитав помощь к заданию вся проблема просто в то что из за однопоточности redis не успевает очистить просроченные ключи, чем и запивается память
+    В манале есть 2 варианта 1 из коготых и так реализован, но ключей слишком много, по этомы я бы выставил срок действия ключа expire, тем самым отчищалось бы большее ко-во ключей 
 #### Задача 3
 
 Перед выполнением задания познакомьтесь с документацией по Common Mysql errors.
