--- a/8.2.md
+++ b/8.2.md
@@ -14,9 +14,57 @@
     [prod.yml](./8.2/playbook/inventory/prod.yml)
 
 2. Допишите playbook: нужно сделать ещё один play, который устанавливает и настраивает [vector](https://vector.dev).
-3. При создании tasks рекомендую использовать модули: `get_url`, `template`, `unarchive`, `file`.
+```bash
+- name: Install Vector
+  hosts: vector
+  handlers:
+    - name: Start Vector service
+      become: true
+      ansible.builtin.service:
+        name: vector
+        state: restarted
+
+  tasks:
+    - name: Get Vector distrib
+      ansible.builtin.get_url:
+        url: "https://packages.timber.io/vector/0.21.1/vector-0.21.1-1.{{ ansible_architecture }}.rpm"
+        dest: "./vector-0.21.1-1.{{ ansible_architecture }}.rpm"
+        mode: 0755
+    - name: Install Vector packages
+      become: true
+      ansible.builtin.yum:
+        name: vector-0.21.1-1.{{ ansible_architecture }}.rpm
+      notify: Start Vector service
+
+    - name: Deploy config Vector
+      ansible.builtin.template:
+        src: vector.j2
+        dest: /etc/vector/vector.toml
+        mode: 0755
+      notify: Start Vector service
+```
+
+5. При создании tasks рекомендую использовать модули: `get_url`, `template`, `unarchive`, `file`.
 4. Tasks должны: скачать нужной версии дистрибутив, выполнить распаковку в выбранную директорию, установить vector.
 5. Запустите `ansible-lint site.yml` и исправьте ошибки, если они есть.
+```bash
+bratashov@alex-NBLK:~/Документы/devops-netology/8.2/playbook$ sudo ansible-lint site.yml
+WARNING  Overriding detected file kind 'yaml' with 'playbook' for given positional argument: site.yml
+WARNING  Listing 1 violation(s) that are fatal
+yaml: no new line character at the end of file (new-line-at-end-of-file)
+site.yml:63
+
+You can skip specific rules or tags by adding them to your configuration file:
+# .ansible-lint
+warn_list:  # or 'skip_list' to silence them completely
+  - yaml  # Violations reported by yamllint
+
+Finished with 1 failure(s), 0 warning(s) on 1 files.
+bratashov@alex-NBLK:~/Документы/devops-netology/8.2/playbook$ sudo ansible-lint site.yml
+WARNING  Overriding detected file kind 'yaml' with 'playbook' for given positional argument: site.yml
+bratashov@alex-NBLK:~/Документы/devops-netology/8.2/playbook$ 
+```
+
 6. Попробуйте запустить playbook на этом окружении с флагом `--check`.
 7. Запустите playbook на `prod.yml` окружении с флагом `--diff`. Убедитесь, что изменения на системе произведены.
 8. Повторно запустите playbook с флагом `--diff` и убедитесь, что playbook идемпотентен.
