--- a/8.2.md
+++ b/8.2.md
@@ -66,10 +66,191 @@ bratashov@alex-NBLK:~/Документы/devops-netology/8.2/playbook$
 ```
 
 6. Попробуйте запустить playbook на этом окружении с флагом `--check`.
-7. Запустите playbook на `prod.yml` окружении с флагом `--diff`. Убедитесь, что изменения на системе произведены.
-8. Повторно запустите playbook с флагом `--diff` и убедитесь, что playbook идемпотентен.
-9. Подготовьте README.md файл по своему playbook. В нём должно быть описано: что делает playbook, какие у него есть параметры и теги.
-10. Готовый playbook выложите в свой репозиторий, поставьте тег `08-ansible-02-playbook` на фиксирующий коммит, в ответ предоставьте ссылку на него.
+```bash
+aleksandrbratasov@N-00095 playbook % ansible-playbook site.yml -i inventory/prod.yml --check
+
+PLAY [Install Clickhouse] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] *****************************************************************************************************************************************************
+Enter passphrase for key '/Users/aleksandrbratasov/.ssh/id_rsa': 
+ok: [clickhouse-01]
+
+TASK [Get clickhouse distrib] **********************************************************************************************************************************************
+changed: [clickhouse-01] => (item=clickhouse-client)
+changed: [clickhouse-01] => (item=clickhouse-server)
+failed: [clickhouse-01] (item=clickhouse-common-static) => {"ansible_loop_var": "item", "changed": false, "dest": "./clickhouse-common-static-22.3.3.44.rpm", "elapsed": 0, "item": "clickhouse-common-static", "msg": "Request failed", "response": "HTTP Error 404: Not Found", "status_code": 404, "url": "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-22.3.3.44.noarch.rpm"}
+
+TASK [Get clickhouse distrib] **********************************************************************************************************************************************
+changed: [clickhouse-01]
+
+TASK [Install clickhouse packages] *****************************************************************************************************************************************
+fatal: [clickhouse-01]: FAILED! => {"changed": false, "msg": "No RPM file matching 'clickhouse-common-static-22.3.3.44.rpm' found on system", "rc": 127, "results": ["No RPM file matching 'clickhouse-common-static-22.3.3.44.rpm' found on system"]}
+
+PLAY RECAP *****************************************************************************************************************************************************************
+clickhouse-01              : ok=2    changed=1    unreachable=0    failed=1    skipped=0    rescued=1    ignored=0
+```   
+8. Запустите playbook на `prod.yml` окружении с флагом `--diff`. Убедитесь, что изменения на системе произведены.
+````bash
+aleksandrbratasov@N-00095 playbook % ansible-playbook site.yml -i inventory/prod.yml --diff 
+
+PLAY [Install Clickhouse] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] *****************************************************************************************************************************************************
+ok: [clickhouse-01]
+
+TASK [Get clickhouse distrib] **********************************************************************************************************************************************
+ok: [clickhouse-01] => (item=clickhouse-client)
+ok: [clickhouse-01] => (item=clickhouse-server)
+failed: [clickhouse-01] (item=clickhouse-common-static) => {"ansible_loop_var": "item", "changed": false, "dest": "./clickhouse-common-static-22.3.3.44.rpm", "elapsed": 0, "gid": 1000, "group": "ansible", "item": "clickhouse-common-static", "mode": "0755", "msg": "Request failed", "owner": "ansible", "response": "HTTP Error 404: Not Found", "secontext": "unconfined_u:object_r:user_home_t:s0", "size": 246310036, "state": "file", "status_code": 404, "uid": 1000, "url": "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-22.3.3.44.noarch.rpm"}
+
+TASK [Get clickhouse distrib] **********************************************************************************************************************************************
+ok: [clickhouse-01]
+
+TASK [Install clickhouse packages] *****************************************************************************************************************************************
+ok: [clickhouse-01]
+
+TASK [Flush handlers] ******************************************************************************************************************************************************
+
+TASK [Delay 5 sec] *********************************************************************************************************************************************************
+Pausing for 5 seconds
+(ctrl+C then 'C' = continue early, ctrl+C then 'A' = abort)
+ok: [clickhouse-01]
+
+TASK [Create database] *****************************************************************************************************************************************************
+ok: [clickhouse-01]
+
+PLAY [Install Vector] ******************************************************************************************************************************************************
+
+TASK [Gathering Facts] *****************************************************************************************************************************************************
+ok: [vector-01]
+
+TASK [Get Vector distrib] **************************************************************************************************************************************************
+ok: [vector-01]
+
+TASK [Install Vector packages] *********************************************************************************************************************************************
+ok: [vector-01]
+
+TASK [Deploy config Vector] ************************************************************************************************************************************************
+--- before: /etc/vector/vector.toml
++++ after: /Users/aleksandrbratasov/.ansible/tmp/ansible-local-88237zow292ka/tmpx2tsq5lu/vector.j2
+@@ -1,28 +1,8 @@
+-#                                    __   __  __
+-#                                    \ \ / / / /
+-#                                     \ V / / /
+-#                                      \_/  \/
+-#
+-#                                    V E C T O R
+-#                                   Configuration
+-#
+-# ------------------------------------------------------------------------------
+-# Website: https://vector.dev
+-# Docs: https://vector.dev/docs
+-# Chat: https://chat.vector.dev
+-# ------------------------------------------------------------------------------
+-
+-# Change this to use a non-default directory for Vector data storage:
+-# data_dir = "/var/lib/vector"
+-
+-# Random Syslog-formatted logs
+ [sources.dummy_logs]
+ type = "demo_logs"
+ format = "syslog"
+ interval = 1
+ 
+-# Parse Syslog logs
+-# See the Vector Remap Language reference for more info: https://vrl.dev
+ [transforms.parse_logs]
+ type = "remap"
+ inputs = ["dummy_logs"]
+@@ -30,15 +10,15 @@
+ . = parse_syslog!(string!(.message))
+ '''
+ 
+-# Print parsed logs to stdout
+ [sinks.print]
+ type = "console"
+ inputs = ["parse_logs"]
+ encoding.codec = "json"
+ 
+-# Vector's GraphQL API (disabled by default)
+-# Uncomment to try it out with the `vector top` command or
+-# in your browser at http://localhost:8686
+-#[api]
+-#enabled = true
+-#address = "127.0.0.1:8686"
++[sinks.my_sink_id]
++type = "clickhouse"
++inputs = [ "parse_logs" ]
++database = "logs"
++endpoint = "http://localhost:8123"
++table = "logstable"
++compression = "gzip"
+\ No newline at end of file
+
+changed: [vector-01]
+
+RUNNING HANDLER [Start Vector service] *************************************************************************************************************************************
+fatal: [vector-01]: FAILED! => {"changed": false, "msg": "Unable to start service vector: Job for vector.service failed because the control process exited with error code. See \"systemctl status vector.service\" and \"journalctl -xe\" for details.\n"}
+
+NO MORE HOSTS LEFT *********************************************************************************************************************************************************
+
+PLAY RECAP *****************************************************************************************************************************************************************
+clickhouse-01              : ok=5    changed=0    unreachable=0    failed=0    skipped=0    rescued=1    ignored=0   
+vector-01                  : ok=4    changed=1    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   
+````
+
+9. Повторно запустите playbook с флагом `--diff` и убедитесь, что playbook идемпотентен.
+````bash
+aleksandrbratasov@N-00095 playbook % ansible-playbook site.yml -i inventory/prod.yml --diff
+
+PLAY [Install Clickhouse] **************************************************************************************************************************************************
+
+TASK [Gathering Facts] *****************************************************************************************************************************************************
+ok: [clickhouse-01]
+
+TASK [Get clickhouse distrib] **********************************************************************************************************************************************
+ok: [clickhouse-01] => (item=clickhouse-client)
+ok: [clickhouse-01] => (item=clickhouse-server)
+failed: [clickhouse-01] (item=clickhouse-common-static) => {"ansible_loop_var": "item", "changed": false, "dest": "./clickhouse-common-static-22.3.3.44.rpm", "elapsed": 0, "gid": 1000, "group": "ansible", "item": "clickhouse-common-static", "mode": "0755", "msg": "Request failed", "owner": "ansible", "response": "HTTP Error 404: Not Found", "secontext": "unconfined_u:object_r:user_home_t:s0", "size": 246310036, "state": "file", "status_code": 404, "uid": 1000, "url": "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-22.3.3.44.noarch.rpm"}
+
+TASK [Get clickhouse distrib] **********************************************************************************************************************************************
+ok: [clickhouse-01]
+
+TASK [Install clickhouse packages] *****************************************************************************************************************************************
+ok: [clickhouse-01]
+
+TASK [Flush handlers] ******************************************************************************************************************************************************
+
+TASK [Delay 5 sec] *********************************************************************************************************************************************************
+Pausing for 5 seconds
+(ctrl+C then 'C' = continue early, ctrl+C then 'A' = abort)
+ok: [clickhouse-01]
+
+TASK [Create database] *****************************************************************************************************************************************************
+ok: [clickhouse-01]
+
+PLAY [Install Vector] ******************************************************************************************************************************************************
+
+TASK [Gathering Facts] *****************************************************************************************************************************************************
+ok: [vector-01]
+
+TASK [Get Vector distrib] **************************************************************************************************************************************************
+ok: [vector-01]
+
+TASK [Install Vector packages] *********************************************************************************************************************************************
+ok: [vector-01]
+
+TASK [Deploy config Vector] ************************************************************************************************************************************************
+ok: [vector-01]
+
+PLAY RECAP *****************************************************************************************************************************************************************
+clickhouse-01              : ok=5    changed=0    unreachable=0    failed=0    skipped=0    rescued=1    ignored=0   
+vector-01                  : ok=4    changed=0    unreachable=0    failed=0    skipped=0    rescued=0    ignored=0   
+
+aleksandrbratasov@N-00095 playbook % 
+````
+10. Подготовьте README.md файл по своему playbook. В нём должно быть описано: что делает playbook, какие у него есть параметры и теги.
+11. Готовый playbook выложите в свой репозиторий, поставьте тег `08-ansible-02-playbook` на фиксирующий коммит, в ответ предоставьте ссылку на него.
 
 ---
 
